https://github.com/yuya-tanaka-yt/and-ha_renewal.git

--- a/css/media.css
+++ b/css/media.css
@@ -1,12 +1,6 @@
 .open,
 .close{
-  z-index: 10;
-  top: 0;
-  right: 0;
   display: none;
-  color: #fff;
-  background: #333333;
-  padding: 10px;
 }
 
 .header-logo-img-aside{
@@ -20,7 +14,7 @@ input[type="checkbox"]{
 
 .aside-wrapper{
   display: none;
-  padding-top: 50px;
+  padding-top: 64px;
 }
 
 .aside-li{
@@ -108,12 +102,83 @@ main{
 }
 
 .open{
-  position: absolute;
+  position: relative;
 }
 
-.close{
-  position: absolute;
+.open,
+.menu-border{
+  display: block;
+  transition: all 0.4s;
+  box-sizing: border-box;
 }
+
+.menu-btn{
+  text-align: center;
+  color: #fff;
+  background: #333333;
+  width: 64px;
+  height: 64px;
+}
+.menu-trigger{
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  height: 12px;
+  width: 30%;
+}
+.menu-trigger span{
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.menu-trigger span:nth-of-type(1){
+  top: 0px;
+}
+.menu-trigger span:nth-of-type(2){
+  top: 5px;
+}
+.menu-trigger span:nth-of-type(3){
+  bottom: 0px;
+}
+
+.menu-trigger::after{
+  content: 'menu';
+  position: absolute;
+  left: 0;
+  bottom: -30px;
+  display: block;
+  width: 100%;
+  color: #fff;
+  font-size: 12px;
+  text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
+  transition: all 0.4s;
+}
+
+input[type="checkbox"]:checked ~ .menu-trigger::after{
+  content: 'close';
+}
+input[type="checkbox"]:checked ~ .menu-border:nth-of-type(1){
+  transform: translateY(5px) rotate(-45deg);
+}
+/* .menu-btn:active .menu-trigger::after{
+  content: 'close';
+}
+.menu-btn:active:active span:nth-of-type(1){
+  transform: translateY(5px) rotate(-45deg);
+}
+.menu-btn:active:active span:nth-of-type(2){
+  opacity: 0;
+}
+.menu-btn:active:active span:nth-of-type(3){
+  transform: translateY(-5px) rotate(45deg);
+} */
+
 
 /* --お問い合わせボタン--*/
 .contact-btn{
@@ -128,20 +193,31 @@ main{
 
 
 /* ------------------header------------------ */
+.sp-header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 64px;
+  position: relative;
+  z-index: 150;
+  position: fixed;
+  background-color:rgba(255, 255, 255, 0.5);
+}
+
 .header-logo-img-aside{
-  padding: 10px 0px 0px 5%; 
-  position: absolute;
-  z-index: 100;
+  align-items: center;
+  margin-left: 20px;
+  padding: 10px;
 }
 
 aside{
   width: 100%;
   position: absolute;
   top: -1000px;
-  z-index: 60;
+  z-index: 50;
   display: flex;
   flex-direction: column;
-  transition: all 0.2s;
+  transition: all 0.3s;
   background: #ffffff;
 }
   
